I definitely should have commited more. Refactored a lot. Fixed bug in rainbow pencil. Hover an pixels is visible. Hover on gallery is visible. Gallery renders correct dimensions. Choose size of canvas feature functional. Canvas and pixel sizes are dynamic based in height and width. Requires image title to start. Will not let you use an image title that already exists in the lirary. Requires height and width to be below 50.

--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -41,6 +41,14 @@ h2 {
      width: 110px;
 }
 
+.gallery-card:hover {
+    cursor: pointer;
+}
+
+.gallery-card:hover .gallery-canvas {
+    filter: drop-shadow(4px 4px 2px rgb(128,255,216,1) );
+}
+
 .gallery-card p {
     overflow-wrap: break-word;
 }
